# neuropaths

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: curved_32.yaml  section2_laminar_32.yaml  smoke_test.yaml  smoke_test_curved.yaml  square_16.yaml  square_32.yaml  square_32_turbulent.yaml  square_32_turbulent_vanilla.yaml  square_32_vanilla.yaml  square_63.yaml
paper/: main.tex
paper/Operator_learning_chapter/: main.tex  ref.bib
paper/bib/: ref.bib
paper/sections/: fno.tex  introduction.tex
scripts/: inference_demo.py  plot_boundaries.py  plot_training_curve.py  super_resolution_eval.py
slurm/: env.sh  generate.slurm  generate_full.slurm  smoke_test.slurm  super_resolution_eval.slurm  train_full.slurm  train_full_avon.slurm
square_32_turbulent/: fno2d_metadata.pkl  fno2d_state_dict.pt  fno2d_stats.npz
src/neuropaths/: __init__.py
src/neuropaths/cli/: __init__.py  evaluate.py  generate.py  train.py
src/neuropaths/config/: __init__.py  loader.py  schema.py
src/neuropaths/data/: __init__.py  dataset.py  generator.py
src/neuropaths/evaluation/: __init__.py  metrics.py  plots.py
src/neuropaths/models/: __init__.py  fno2d.py
src/neuropaths/pde/: __init__.py  boundaries.py  solvers.py  transforms.py  velocity.py
src/neuropaths/training/: __init__.py  losses.py  trainer.py
src/neuropaths/utils/: __init__.py  device.py  io.py  seeding.py
tests/: test_cli.py  test_config.py  test_data.py  test_evaluation.py  test_models.py  test_pde_boundaries.py  test_pde_solvers.py  test_pde_transforms.py  test_pde_velocity.py  test_training.py  test_utils_device.py
